[package]
name = "pinvec"
version ="0.1.0"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
edition = "2018"
homepage = "http://phoenixkahlo.com"
description = "Growable vector-like structure which never moves its contents"
readme = "README.md"
categories = ["memory-management"]
license-file = "LICENSE.md"
repository = "https://github.com/gretchenfrage/ltstack"

[dependencies]
pow_of_2 = { version = "^0.1.2" }
