[package]
name = "pow_of_2"
version ="0.1.2"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
homepage = "http://phoenixkahlo.com"
edition = "2018"
description = "Integer-like types which can only represent powers of 2"
readme = "README.md"
categories = ["mathematics", "no-std"]
license-file = "LICENSE.md"

[dependencies]
